# spotify-app-authenticator

./: Cargo.toml  README.md  config.json
src/: config.rs  main.rs  spotify_auth.rs
