[package]
name = "simple-spotify-app-auth"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.3.0", features = ["derive"] }
tiny_http = "0.12.0"
url = "2.3.1"
anyhow = "1.0.71"
dotenv = "0.15.0"
rand = "0.8.5"
base64 = "0.21.2"
webbrowser = "0.8.10"
sha2 = "0.10.6"
